# kedro_workshop

./: .gitignore  README.md  pyproject.toml  requirements.txt
conf/: logging.yml
conf/base/: catalog.yml
notebooks/: Untitled.ipynb
src/kedro_workshop/: __main__.py  settings.py
src/kedro_workshop/pipelines/clean/: __init__.py  nodes.py  pipeline.py  utils.py
src/kedro_workshop/pipelines/extract/: nodes.py  pipeline.py  validation.py
src/kedro_workshop/pipelines/model/: __init__.py  data_utils.py  nodes.py  pipeline.py  plot_utils.py
src/kedro_workshop/pipelines/transform/: __init__.py  geo_utils.py  nodes.py  pipeline.py
tests/pipelines/clean/: test_pipeline.py
tests/pipelines/data_science/: test_pipeline.py
tests/pipelines/transform/: test_pipeline.py
