[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "kedro_workshop"
readme = "README.md"
dynamic = [ "version",]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "kedro-datasets[api-apidataset,json-jasondataset,pandas-csvdataset,pandas-exceldataset,pandas-parquetdataset]>=3.0",
    "kedro-viz>=6.7.0",
    "kedro[jupyter]~=1.0.0",
    "notebook>=7.4.5",
    "s3fs>=2025.7.0",
    "scikit-learn~=1.5.1",
    "seaborn~=0.12.1",
]

[project.scripts]
kedro-workshop = "kedro_workshop.__main__:main"

[project.optional-dependencies]
dev = [ "pytest-cov~=3.0", "pytest-mock>=1.7.1, <2.0", "pytest~=7.2", "ruff~=0.12.0",]

[tool.kedro]
package_name = "kedro_workshop"
project_name = "kedro_workshop"
kedro_init_version = "1.0.0"
tools = "['Linting', 'Testing', 'Custom Logging', 'Data Structure']"
example_pipeline = "True"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/kedro_workshop -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [ "pragma: no cover", "raise NotImplementedError",]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
ignore = [ "E501",]

[tool.setuptools.dynamic.version]
attr = "kedro_workshop.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "40d618de216d4f89bbb8062f32355744"
